--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     {
       "chipFamily": "ESP32-S3",
       "parts": [
-        { "path": "./webflasher/firmwares/esp32fw.bin", "offset": 0 }
+        { "path": "webflasher/licensees/esp32fw.bin", "offset": 0 }
       ]
     }
   ]
