Move all files to root directory, remove webflasher subfolder

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
     {
       "chipFamily": "ESP32-S3",
       "parts": [
-        { "path": "./firmwares/esp32fw.bin", "offset": 0 }
+        
+        { "path": "./firmwares/OL33.bin", "offset": 0 }
       ]
     }
   ]
